--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-API_KEY=AIzaSyCdpdQ0mUhv3D4fUi6QNPdf39pFLhTNnpA
-AUTH_DOMAIN=prilla-c8eca.firebaseapp.com
-PROJECT_ID=prilla-c8eca
-STORAGE_BUCKET=prilla-c8eca.appspot.com
-MESSAGING_SENDER_ID=267350792334
-APP_ID=1:267350792334:web:614ebc1c0a786003dc51df
+FIREBASE_API_KEY=AIzaSyCdpdQ0mUhv3D4fUi6QNPdf39pFLhTNnpA
+FIREBASE_AUTH_DOMAIN=prilla-c8eca.firebaseapp.com
+FIREBASE_PROJECT_ID=prilla-c8eca
+FIREBASE_STORAGE_BUCKET=prilla-c8eca.appspot.com
+FIREBASE_MESSAGING_SENDER_ID=267350792334
+FIREBASE_APP_ID=1:267350792334:web:614ebc1c0a786003dc51df
