--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,25 +5,19 @@ jobs:
     name: main
     runs-on: ubuntu-latest
     steps:
-      - name: Set up repository
-        uses: actions/checkout@v2
-      - name: Set up Node
-        uses: actions/setup-node@v1
+        uses: actions/checkout@v3
+        uses: actions/setup-node@v3
         with:
-          node-version: 14.x
-      - name: Set up Expo
+          node-version: 16
         uses: expo/expo-github-action@v7
         with:
           expo-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
-      - name: Install dependencies
         run: npm install
-      - name: Publish to Expo & create a QR code
         uses: expo/expo-preview-action@v1
         with:
           channel: pr-${{ github.event.number }}
         id: preview
-      - name: Comment deployment link
         uses: unsplash/comment-on-pr@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
