--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-bouncy-checkbox": "^3.0.6",
     "react-native-rating-element": "^5.4.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
