--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "expo-web-browser": "~12.0.0",
     "firebase": "^9.15.0",
     "formik": "^2.2.9",
+    "lodash.isequal": "^4.5.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-bouncy-checkbox": "^3.0.6",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-radio-buttons-group": "^2.2.11",
     "react-native-rating-element": "^5.4.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
@@ -44,6 +46,7 @@
     "@babel/core": "^7.12.9",
     "@tsconfig/react-native": "^2.0.3",
     "@types/jest": "^29.2.4",
+    "@types/lodash.isequal": "^4.5.6",
     "@types/react": "~18.0.24",
     "@types/react-native": "^0.70.8",
     "@types/react-test-renderer": "^18.0.0",
