--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@reduxjs/toolkit": "^1.9.1",
     "expo": "~47.0.8",
     "expo-asset": "~8.6.2",
+    "expo-constants": "~14.0.2",
     "expo-font": "~11.0.1",
+    "expo-image-picker": "~14.0.2",
     "expo-linking": "~3.2.3",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
