--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "build": "webpack --mode=production --node-env=production",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production --node-env=production",
+    "watch": "webpack --watch",
+    "serve": "webpack serve"
   },
   "jest": {
     "preset": "jest-expo"
@@ -54,10 +59,20 @@
     "@types/react": "~18.0.24",
     "@types/react-native": "^0.70.8",
     "@types/react-test-renderer": "^18.0.0",
+    "@webpack-cli/generators": "^3.0.1",
+    "css-loader": "^6.7.3",
+    "html-webpack-plugin": "^5.5.0",
     "jest": "^26.6.3",
     "jest-expo": "~47.0.1",
+    "prettier": "^2.8.1",
     "react-test-renderer": "18.1.0",
-    "typescript": "^4.9.4"
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.4",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   },
-  "private": true
+  "private": true,
+  "description": "My webpack project"
 }
