--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "react-redux": "^8.0.5",
     "react-redux-firebase": "^3.11.0",
     "redux-thunk": "^2.4.2",
-    "yup": "^0.32.11"
+    "vercel": "^28.10.1",
+    "yup": "^0.32.11",
+    "@expo/webpack-config": "^0.17.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
