--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "@reduxjs/toolkit": "^1.9.1",
+    "eas-cli": "^3.1.1",
     "expo": "~47.0.8",
     "expo-asset": "~8.6.2",
     "expo-constants": "~14.0.2",
