--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,8 @@
     "target": "es5",
     "allowJs": true
   },
-  "files": ["src/index.ts"]
+  "files": [
+    "src/index.ts"
+  ],
+  "extends": "expo/tsconfig.base"
 }
