--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react-redux": "^8.0.5",
     "react-redux-firebase": "^3.11.0",
     "redux-thunk": "^2.4.2",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "expo-updates": "~0.15.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
