--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "expo-system-ui": "~2.0.1",
+    "expo-updates": "~0.15.6",
     "expo-web-browser": "~12.0.0",
     "firebase": "^9.15.0",
     "formik": "^2.2.9",
@@ -47,7 +48,6 @@
     "react-redux": "^8.0.5",
     "react-redux-firebase": "^3.11.0",
     "redux-thunk": "^2.4.2",
-    "vercel": "^28.10.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -67,11 +67,8 @@
     "react-test-renderer": "18.1.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.2",
-    "typescript": "^4.9.4",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1"
+    "typescript": "^4.9.4"
   },
   "private": true,
-  "description": "My webpack project"
+  "description": "Prilla - För dig som gillar snus"
 }
