--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "react-redux-firebase": "^3.11.0",
     "redux-thunk": "^2.4.2",
     "yup": "^0.32.11",
-    "expo-updates": "~0.15.6"
+    "expo-updates": "~0.15.6",
+    "expo-haptics": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
