--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest --watchAll",
+    "test": "jest ",
     "predeploy": "expo export:web",
     "deploy-hosting": "npm run predeploy && firebase deploy --only hosting"
   },
