--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "react-redux": "^8.0.5",
     "react-redux-firebase": "^3.11.0",
     "yarn": "^1.22.19",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "expo-linear-gradient": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
