--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native": "0.70.5",
     "react-native-bouncy-checkbox": "^3.0.6",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^5.1.2",
     "react-native-radio-buttons-group": "^2.2.11",
     "react-native-rating-element": "^5.4.0",
