--- a/app.json
+++ b/app.json
@@ -14,9 +14,12 @@
       "backgroundColor": "#201A28"
     },
     "updates": {
-      "fallbackToCacheTimeout": 0
+      "fallbackToCacheTimeout": 0,
+      "url": "https://u.expo.dev/f013faad-b3a4-4832-bd3f-130898c235d2"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
@@ -33,6 +36,9 @@
       "eas": {
         "projectId": "f013faad-b3a4-4832-bd3f-130898c235d2"
       }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
     }
   }
 }
