--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@reduxjs/toolkit": "^1.9.1",
     "expo": "~47.0.8",
     "expo-asset": "~8.7.0",
+    "expo-camera": "~13.1.0",
     "expo-constants": "~14.0.2",
     "expo-font": "~11.0.1",
     "expo-haptics": "~12.0.1",
@@ -54,8 +55,7 @@
     "react-redux-firebase": "^3.11.0",
     "redux-thunk": "^2.4.2",
     "yarn": "^1.22.19",
-    "yup": "^0.32.11",
-    "expo-camera": "~13.1.0"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
