--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "react-redux-firebase": "^3.11.0",
     "redux-thunk": "^2.4.2",
     "yarn": "^1.22.19",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "@react-native-async-storage/async-storage": "~1.17.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
