--- a/app.json
+++ b/app.json
@@ -26,9 +26,12 @@
         }
       ]
     ],
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.mirrenil.prilla"
     },
     "android": {
       "adaptiveIcon": {
